--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    
+    background-size:cover;
+    background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('./assets/img/fondo.jpg');
+}
